<resources>
    <string name="app_name">User Authentication</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register">REGISTER</string>
    <string name="todo">todo</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="email_address">Email</string>
    <string name="Email_address">Email Address</string>
    <string name="Password">Password</string>
    <string name="Username">Username</string>
    <string name="Register">Register</string>
</resources>